@@ -643,7 +643,7 @@ homshuffle: 60,60
 
 // WoE 2 start/stop commands
 agitstart2: 60,60
-agitend: 60,60
+agitend2: 60,60
 
 // Resets player stats
 streset: 60,60
